# burn-rs-models

bert-burn/: Cargo.toml
llama-burn/: Cargo.toml
llama-burn/src/: sampling.rs
mobilenetv2-burn/: Cargo.toml
resnet-burn/: Cargo.toml
resnet-burn/examples/finetune/: Cargo.toml
resnet-burn/examples/inference/: Cargo.toml
resnet-burn/resnet/: Cargo.toml
squeezenet-burn/: Cargo.toml
yolox-burn/: Cargo.toml
yolox-burn/src/model/: boxes.rs  yolox.rs
