[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
name = "inference"
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
resnet-burn = { path = "../../resnet", features = ["pretrained"] }
burn = { workspace = true, features = ["wgpu"] }
image = { version = "0.25.6", features = ["png", "jpeg"] }
